[workspace]
members = [
    ".", "examples/example",
    "scoped-css-build",
    "scoped-css-core",
]
resolver = "2"

[workspace.package]
edition = "2024"

[package]
name = "scoped-css"
version = "0.1.0"
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
scoped-css-core = { path = "./scoped-css-core" }
quote = "1"
unsynn = "0"
proc-macro2 = { version = "1.0.104", features = ["span-locations"] }
lightningcss = "1.0.0-alpha.68"
