[workspace]
members = [
    ".", 
    "examples/example",
    "scoped-css-build",
    "scoped-css-core", 
    "scoped-css-macro",
]
resolver = "2"

[workspace.package]
edition = "2024"

[package]
name = "scoped-css"
version = "0.1.0"
edition.workspace = true

[dependencies]
scoped-css-core = { path = "./scoped-css-core" }
scoped-css-macro = { path = "./scoped-css-macro" }
