[package]
name = "dioxus-example"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router"] }
scoped-css = { path = "../.." }

[build-dependencies]
scoped-css-build = { path = "../../scoped-css-build" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
